2004-05-30  Markus Germeier  <mager@tzi.de>
	* added Roberts MMC code (step 1)
	* fixed a FAT bug he found on the way
	* Thanks and kudos to Robert!

2004-05-30  Markus Germeier  <mager@tzi.de>
	* changed version to 0.7.1-pre2

2004-04-24  Markus Germeier  <mager@tzi.de>
	* further open/close fixes
	
2004-04-23  Markus Germeier  <mager@tzi.de>	
	* libmpio/src/mpio.c (mpio_close): 
	  - fixed a stupid bug while closing the device
	* don't dump core if internal memory is not available

2004-04-23  Markus Germeier  <mager@tzi.de>
	* remove all files from CVS which can be automagically
	  generated by the build environment
	  -> this should fix the missing ".so" problem
	     and all other "inter-version" problems
	     (at least so I hope ;-)
	
2004-04-19  Markus Germeier  <mager@tzi.de>
	* added hotplug infrastructure to the project
	  - defaults to root:root 0666
	  - change with --with-{user,group,perm}=
	  - minor clean ups
	* changed version to 0.7.1-pre1

2004-04-19  Markus Germeier  <mager@tzi.de>
	* libmpio/src/smartmedia.c: 
	  libmpio/src/io.c: 
	  fixed debug outputs and copyright notice
	* removed "#ifdef HAVE_USB"s
	  libusb is mandatory now!
	* added "#ifdef USE_KMODULE"	  	    
	* removed noisy and misleading debug messages
	
2004-03-25  Markus Germeier  <mager@tzi.de>
	* Don't BuildRequire libusb-devel because
	  it does not exist on SuSE 9.0
	
2004-03-24  Markus Germeier  <mager@tzi.de>
        * dummy entry! fixed CVS syncmail
	* check latest Changelog entries!
	
2004-03-24  Markus Germeier  <mager@tzi.de>
	* small build environment updates
	* updated mpio.spec.in file
	
2004-03-21  Markus Germeier  <mager@tzi.de>
	* fixed build environment
	* kernel module is (finally) deprecated
	* may be enabled "--with-kernel-module"
	
2004-02-08  Markus Germeier  <mager@tzi.de>
	* added support for the new 128MB internal chip
	  reported by Karin. Thanks!

2004-01-13  Markus Germeier  <mager@tzi.de>
        * Added FY200 informations which is reported to work